--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,27 @@
-# Coolify Auto-Reply Cron Deployment dosyaları
-auto-reply-missed-calls.js
-package.json
-package-lock.json
+# Git files
+.git
+.gitignore
+
+# Environment
 .env
-Dockerfile
-docker-compose.yml
+
+# Documentation
+*.md
+README.md
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Gereksiz dosyalar
+auto-reply-missed-calls.js
+whatsapp-queue-processor.js
