--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,13 @@ services:
     environment:
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
-    # Her 2 dakikada bir: 1) Cevapsız aramaları kontrol et, 2) Kuyruktaki mesajları gönder
     command: sh -c "while true; do node combined-auto-reply-system.js; echo 'Sleeping for 2 minutes...'; sleep 120; done"
+    healthcheck:
+      test: ["CMD", "sh", "-c", "pgrep -f 'sh -c while' || exit 1"]
+      interval: 2m
+      timeout: 10s
+      start_period: 30s
+      retries: 3
     logging:
       driver: "json-file"
       options:
