Add type module to package.json to fix Node.js warning

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sporcum-supabase-migration",
   "version": "1.0.0",
+  "type": "module",
   "description": "Firebase to Supabase migration tools for Sporcum CRM",
   "main": "index.js",
   "scripts": {
