--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
+      - TZ=Europe/Istanbul
     command: sh -c "while true; do node combined-auto-reply-system.js; echo 'Sleeping for 2 minutes...'; sleep 120; done"
     healthcheck:
       test: ["CMD", "sh", "-c", "pgrep -f 'sh -c while' || exit 1"]
